# STEP-parser

./: .gitignore  CMakeLists.txt
examples/: cmesh.cpp
resources/: stash  teapot_bezier.py
src/: cmesh4.cpp  stp_parser.cpp
